created functions for assembling the layout.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,5 +8,7 @@ export(Cell)
 export(Excelable)
 export(ItemSet)
 export(add_data)
+export(add_fork_node)
 export(add_formula)
+export(add_terminal_node)
 export(create_MondrianSheets)
